k8s/platform/gateway/20-public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: harborsync-public
  namespace: harborsync-gateway
spec:
  gatewayClassName: tigera-gateway-class
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: harborsync-public
  listeners:
    - name: http
      hostname: app.harborsync.lab
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: app.harborsync.lab
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: app-harborsync-lab-tls
      allowedRoutes:
        namespaces:
          from: All
