k8s/platform/gateway/40-demo-web-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-web
  namespace: harborsync-demo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: harborsync-public
      namespace: harborsync-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: harborsync-public
      namespace: harborsync-gateway
      sectionName: https
  hostnames:
    - app.harborsync.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-web
          port: 80
